# kupibuket74_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.json  seed.py
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  db.py  enums.py  main.py  railway.py  run_api.py  run_bot.py
app/api/: deps.py  main.py  schemas.py  security.py
app/api/routes/: __init__.py  analytics.py  auth.py  batches.py  couriers.py  orders.py
app/handlers/: __init__.py  admin.py  common.py  courier.py
app/keyboards/: admin.py  common.py  courier.py
app/middlewares/: auth.py  db.py
app/models/: __init__.py  base.py  batch.py  courier.py  courier_location.py  order.py  pickup_point.py  problem_reason.py  status_history.py
app/repositories/: courier.py  lookup.py  order.py
app/services/: analytics.py  auth.py  formatters.py  notifications.py  orders.py  routing.py  scheduler.py
app/states/: order_create.py
